a few tweaks, need to resolve stuck projectile bug

--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -11,15 +11,18 @@ body {
   height: 100%;
   width: 100%;
   position: relative;
-  /*background: "white";*/
+  background-color: black;
 }
 .healthbar {
   width: 300px;
-  height: 10px;
+  height: 15px;
   position: relative;
   border: 1px solid black;
   background: yellow;
+}
 
+.score {
+  color: white;
 }
 
 .board {
@@ -72,7 +75,7 @@ header{
 h1 {
   font-size: 68px;
   font-weight: bold;
-
+  color: white;
 }
 
 .mainflex {
@@ -144,7 +147,7 @@ p {
 .projectile {
   height: 3px;
   width: 3px;
-  background: black;
+  background: white;
   border-radius: 50%;
   z-index: 10000;
   position: absolute;
